Change header font

--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -42,9 +42,9 @@ $theme := {
 // //    font-style italic
 // //    src url(../../static/font/AdobeCaslonPro-Italic.woff2)
 
-// //  @font-face
-// //    font-family CalvertMT
-// //    src url(../../static/font/CalvertMT.woff)
+ @font-face
+   font-family CalvertMT
+   src url(../../static/font/CalvertMT.woff)
 
 
 // Override typography variables
