--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -6,6 +6,46 @@ h3,
 h4,
 h5,
 h6 {
-  // font-family: CalvertMT;
-  font-family: 'Carrois Gothic';
+  font-family: CalvertMT;
+  // font-family: 'Carrois Gothic';
+}
+
+.footer-about {
+  // font-size: 0.9em;
+  a {
+    text-decoration: none;
+    // border-bottom: thin solid rgba(229, 111, 0, 0.69);
+    color: #ccc;
+    &:hover {
+      border-bottom: thick solid rgba(229, 111, 0, 0.23);
+    }
+  }
+}
+
+.opacity-1 {
+  opacity: 0.1;
+}
+.opacity-2 {
+  opacity: 0.2;
+}
+.opacity-3 {
+  opacity: 0.3;
+}
+.opacity-4 {
+  opacity: 0.4;
+}
+.opacity-5 {
+  opacity: 0.5;
+}
+.opacity-6 {
+  opacity: 0.6;
+}
+.opacity-7 {
+  opacity: 0.7;
+}
+.opacity-8 {
+  opacity: 0.8;
+}
+.opacity-9 {
+  opacity: 0.9;
 }
