--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -31,25 +31,40 @@ $theme := {
 // // Darden's web body font in new brand guidelines is Caslon.
 // // Caslon should be set at 21px (with line-height 1.3) for readability
 // // Header font is Calvert 
+// Update 11/16/17: Darden fonts seem to have changed: header > Frankling Gothic UW, body > Georgia
 
 //  @font-face
 //    font-family Caslon
 //    font-style normal
 //    src url(../../static/font/AdobeCaslonPro-Regular.woff2)
 
-// //  @font-face
-// //    font-family Caslon
-// //    font-style italic
-// //    src url(../../static/font/AdobeCaslonPro-Italic.woff2)
+//  @font-face
+//    font-family Caslon
+//    font-style italic
+//    src url(../../static/font/AdobeCaslonPro-Italic.woff2)
 
- @font-face
-   font-family CalvertMT
-   src url(../../static/font/CalvertMT.woff)
+//  @font-face
+//    font-family CalvertMT
+//    src url(../../static/font/CalvertMT.woff)
 
 
 // Override typography variables
-$body-font-family := Open Sans
-// $body-font-family := Caslon
-// $font-size-root := 14px
-// $line-height-root := 1.3
+
+$headings := {
+  h1: { size: 112px, weight: 300, line-height: 1, letter-spacing: -.04em },
+  h2: { size: 56px, weight: 400, line-height: 1.35, letter-spacing: -.02em },
+  h3: { size: 45px, weight: 400, line-height: 48px, letter-spacing: normal },
+  h4: { size: 34px, weight: 400, line-height: 40px, letter-spacing: normal },
+  h5: { size: 24px, weight: 400, line-height: 32px, letter-spacing: normal },
+  h6: { size: 20px, weight: 500, line-height: 1, letter-spacing: .02em },
+  subheading: { size: 16px, weight: 400 },
+  body-2: { size: 14px, weight: 600 },
+  body-1: { size: 14px, weight: 500 },
+  caption: { size: 12px, weight: 400 },
+  button: { size: 14px, weight: 500 }
+}
+
+$body-font-family := Georgia
+$font-size-root := 18px
+$line-height-root := 1.6em
 @import '../../node_modules/vuetify/src/stylus/main'
