some cleanup of app.styl

--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -11,16 +11,11 @@ $theme := {
 //   text--primary: #E57200
 
 //   // Darden other colors
-  accent: #eaaa00
-  accent-1: #a8ad00
-  accent-2: #a2aaad
-  accent-3: #5b7f95
-  accent-4: #c5b9ac
-//   text--accent: #eaaa00
-//   text--accent-1: #a8ad00
-//   text--accent-2: #a2aaad
-//   text--accent-3: #5b7f95
-//   text--accent-4: #c5b9ac
+  // accent: #eaaa00
+  // accent-1: #a8ad00
+  // accent-2: #a2aaad
+  // accent-3: #5b7f95
+  // accent-4: #c5b9ac
 
   info: $blue.base
   warning: $amber.base
@@ -38,18 +33,11 @@ $theme := {
 //    font-style normal
 //    src url(../../static/font/AdobeCaslonPro-Regular.woff2)
 
-//  @font-face
-//    font-family Caslon
-//    font-style italic
-//    src url(../../static/font/AdobeCaslonPro-Italic.woff2)
-
-//  @font-face
-//    font-family CalvertMT
-//    src url(../../static/font/CalvertMT.woff)
 
 
 // Override typography variables
 
+// does it work? Doesn't look like
 $headings := {
   h1: { size: 112px, weight: 300, line-height: 1, letter-spacing: -.04em },
   h2: { size: 56px, weight: 400, line-height: 1.35, letter-spacing: -.02em },
@@ -57,11 +45,11 @@ $headings := {
   h4: { size: 34px, weight: 400, line-height: 40px, letter-spacing: normal },
   h5: { size: 24px, weight: 400, line-height: 32px, letter-spacing: normal },
   h6: { size: 20px, weight: 500, line-height: 1, letter-spacing: .02em },
-  subheading: { size: 16px, weight: 400 },
-  body-2: { size: 14px, weight: 600 },
-  body-1: { size: 14px, weight: 500 },
-  caption: { size: 12px, weight: 400 },
-  button: { size: 14px, weight: 500 }
+  subheading: { size: 20px, weight: 400 },
+  body-2: { size: 18px, weight: 600 },
+  body-1: { size: 18px, weight: 500 },
+  caption: { size: 15px, weight: 400 },
+  button: { size: 18px, weight: 500 }
 }
 
 $body-font-family := Georgia
