--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -53,6 +53,6 @@ input,
 textarea,
 select,
 option {
-  font-family: Libre Franklin;
-  font-size: 0.7em !important;
+  // font-family: Libre Franklin;
+  // font-size: 0.7em !important;
 }
