--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -59,15 +59,16 @@ option {
 
 // graphs
 
-.viz-shadow {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 2px 5px 10px rgba(0, 0, 0, 0.24);
-  // box-shadow: 0 3px 3px rgba(0, 0, 0, 0.12), 0 25px 25px rgba(0, 0, 0, 0.24);
-  // transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-  // &:hover {
-  //     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
-}
+// .viz-shadow {
+//   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 2px 5px 10px rgba(0, 0, 0, 0.24);
+//   // box-shadow: 0 3px 3px rgba(0, 0, 0, 0.12), 0 25px 25px rgba(0, 0, 0, 0.24);
+//   // transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+//   // &:hover {
+//   //     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
+// }
 
-.tooltip {
+// .tooltip conflicts with vuetify class
+.tooltip-viz {
   font-family: LIbre Franklin;
   background-color: whitesmoke;
 }
