Working version without map with new data

--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -39,7 +39,7 @@ $headings := {
   button: { size: 18px, weight: 500 }
 }
 
-$body-font-family := Georgia
-$font-size-root := 18px
-$line-height-root := 1.6em
+// $body-font-family := Georgia
+// $font-size-root := 18px
+// $line-height-root := 1.6em
 @import '../../node_modules/vuetify/src/stylus/main'
