change font; add typekit

--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -1,37 +1,15 @@
 /** Stylus Styles */
 @import '../../node_modules/vuetify/src/stylus/settings/_colors'
 
-$theme := {
-  // DardenOrange
-  primary: #E57200
-  // DardenBlue
-  secondary: #002F6C
-  // text--secondary: #002F6C
-
-//   text--primary: #E57200
-
-//   // Darden other colors
-  // accent: #eaaa00
-  // accent-1: #a8ad00
-  // accent-2: #a2aaad
-  // accent-3: #5b7f95
-  // accent-4: #c5b9ac
-
-  info: $blue.base
-  warning: $amber.base
-  error: $red.base
-  success: $green.base
-}
-
 
 // does it work? Doesn't look like
 $headings := {
-  h1: { size: 112px, weight: 300, line-height: 1, letter-spacing: -.04em },
-  h2: { size: 56px, weight: 400, line-height: 1.35, letter-spacing: -.02em },
-  h3: { size: 45px, weight: 400, line-height: 48px, letter-spacing: normal },
-  h4: { size: 34px, weight: 400, line-height: 40px, letter-spacing: normal },
-  h5: { size: 24px, weight: 400, line-height: 32px, letter-spacing: normal },
-  h6: { size: 20px, weight: 500, line-height: 1, letter-spacing: .02em },
+  h1: { size: 112px, weight: 300, line-height: 1, letter-spacing: 0.2em },
+  h2: { size: 56px, weight: 400, line-height: 1.35, letter-spacing: 0.2em },
+  h3: { size: 45px, weight: 400, line-height: 48px, letter-spacing: 0.2em },
+  h4: { size: 34px, weight: 400, line-height: 40px, letter-spacing: 0.2em },
+  h5: { size: 24px, weight: 400, line-height: 32px, letter-spacing: 0.2em },
+  h6: { size: 20px, weight: 500, line-height: 1, letter-spacing: 0.2em },
   subheading: { size: 20px, weight: 400 },
   body-2: { size: 18px, weight: 600 },
   body-1: { size: 18px, weight: 500 },
