--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -58,6 +58,13 @@ option {
   font-family: franklin-gothic-urw;
   // font-size: 0.7em !important;
 }
+
+table.table tbody td {
+  font-size: 1.2em;
+}
+table.table thead th {
+  font-size: 1.3em;
+}
 // ********************
 // d3
 // ********************
