--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -40,8 +40,8 @@ h4,
 h5,
 h6 {
   font-family: 'franklin-gothic-urw';
-  font-weight: 800;
-  line-height: 1.4em;
+  font-weight: 500;
+  // line-height: 1.4em;
   text-transform: uppercase;
 }
 
