--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1,10 +1,4 @@
 // https://brand.darden.virginia.edu/color/
-
-// It might be good to go over fonts styles with you, but to help you set them up now you can implement this code in the head of your HTML:
-// <script src="https://use.typekit.net/meb4tnc.js"></script>
-// <script>try{Typekit.load({ async: true });}catch(e){}</script>
-
-// You’ll want to go through your styles in CSS and change it to say “font-family: “franklin-gothic-urw”, arial, sans-serif;”. You’ll mostly use Franklin Gothic for headings, navigation and any other similar forms of text. When it comes to using a serif font, we have decided to use Georgia which doesn’t need any special code. Most cases for using Georgia are in the paragraph text.
 .opacity-1 {
   opacity: 0.1;
 }
@@ -39,15 +33,16 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'franklin-gothic-urw';
+  // font-family: 'franklin-gothic-urw';
+  font-family: 'Open Sans';
   font-weight: 500;
   // line-height: 1.4em;
   text-transform: uppercase;
 }
 
 p {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 18px;
+  font-family: 'Open Sans', Georgia, 'Times New Roman', Times, serif;
+  font-size: 17px;
 }
 
 button,
